fix(textprocessing): fix exception in `patchTokens()`